# lenny

./: CAA.md  CLAUDE.md  README.md
lenny1/: .gitignore  Cargo.toml  README.md  config.template.yaml  config.yaml.template
lenny1/src/: agent.rs  bot.rs  cli_bot.rs  config.rs  context.rs  contextual_indexer.rs  dream.rs  embed.rs  evals.rs  lib.rs  main.rs  matrix_bot.rs  once.rs  research.rs  session.rs  tokens.rs
lenny1/src/actions/: compact.rs  comprehension.rs  fact.rs  mod.rs  sessionize_chats.rs
lenny1/src/evals/: all.rs  basic.rs  contextual_all.rs  contextual_chats.rs  contextual_indexer.rs  contextual_texts.rs  fact.rs  mod.rs
lenny1/src/research/: bluesky.rs
lenny1/src/tools/: bluesky_trending.rs  context_search.rs  extract_to_note.rs  extract_url.rs  extract_url_to_note.rs  final_answer.rs  lookup_reference.rs  mod.rs  no_response.rs  notes.rs  random_letter.rs  random_number.rs  read_note.rs  scrape_url.rs  summarize_url.rs  web_scrape.rs  web_search.rs  write_note.rs
lenny1/tests/: bot.rs  cli_bot.rs  compact.rs  comprehension.rs  contextual_indexer.rs  fact.rs  sessionize_chats.rs
lenny1/tests/fixtures/basic-evals/dynamic/: facts.txt
lenny1/tests/fixtures/basic-evals/system/: 00-identity.md
lenny1/tests/fixtures/chat-data/: 01.ndjson  02.ndjson  03.ndjson  08.ndjson  09.ndjson  10.ndjson  14.ndjson  15.ndjson  16.ndjson  17.ndjson  18.ndjson  20.ndjson
lenny1/tests/fixtures/chat_data/: 04.ndjson  05.ndjson  06.ndjson  07.ndjson  11.ndjson  12.ndjson  13.ndjson  19.ndjson
lenny1/tests/fixtures/fact-data/: 2025-11-01_10-00-00_preferences.txt  2025-11-02_10-00-00_project-alpha.txt  2025-11-03_10-00-00_tech-decisions.txt  2025-11-04_10-00-00_meeting-notes.txt  2025-11-05_10-00-00_cooking-notes.txt  2025-11-06_10-00-00_travel-experiences.txt
lenny1/tests/fixtures/texts/: thomas-paine-common-sense.txt
lenny2/: .gitignore  Cargo.toml  README.md
lenny2/src/: build_context.rs  cluster.rs  config.rs  db.rs  download.rs  embed.rs  main.rs  query.rs  tokens.rs
loop-eval/: .gitignore  Cargo.toml  README.md
loop-eval/fixtures/: needle_in_haystack.txt  noisy_context.txt
loop-eval/src/: agent.rs  config.rs  main.rs  runner.rs  tools.rs
loop-eval/src/datasets/: empty_search.rs  hallucination.rs  mod.rs  tool_use.rs
