[package]
name = "lenny1"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify-debouncer-full = "0.7"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
regex = "1"
tempfile = "3"
matrix-sdk = { version = "0.16", features = ["sqlite"] }
reqwest = "0.12"
futures-util = "0.3"
url = "2"
schemars = "1"
html-to-markdown-rs = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
