[package]
name = "lenny1"
version = "0.1.0"
edition = "2024"
default-run = "lenny1"

[dependencies]
openrouter-rs = "0.5.2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify-debouncer-full = "0.7"
anyhow = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
regex = "1"
tempfile = "3"
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls", "sqlite", "e2e-encryption", "automatic-room-key-forwarding"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures-util = "0.3"
url = "2"
schemars = "1"
html-to-markdown-rs = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastembed = "5"
rusqlite = { version = "0.37", features = ["bundled"] }
sqlite-vec = "0.1"
firecrawl = "1.2.1"
pulldown-cmark = "0.13.1"
chrono-tz = "0.10.4"
tiktoken-rs = "0.9.1"

[profile.dev.package.firecrawl]
opt-level = 0
debug-assertions = false

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
fastembed = { version = "5", features = ["ort-load-dynamic"] }
