[package]
name = "lenny2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
fastembed = "5"
firecrawl = "1.2"
linfa = "0.7"
linfa-clustering = "0.7"
ndarray = "0.15"
ndarray-rand = "0.14"
rand_xoshiro = "0.6"
rig-core = { version = "0.32", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlite-vec = "0.1"
tiktoken-rs = "0.9"
tokio = { version = "1", features = ["full"] }

[profile.dev.package.fastembed]
opt-level = 3

[profile.dev.package.firecrawl]
opt-level = 0
debug-assertions = false
